--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,2 @@
 [MyConfig]
-filename = "/Users/wl/Desktop/ZhaoSongPy/doc/url.txt"
-output_dir = "/Users/wl/Desktop/linshi_pic"
-desktop = '/Users/wl/Desktop'
-save_path = "/Users/wl/Desktop/video_youtube.mp4"
+filename = "./doc/url.txt"
