--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASS='123456'
 SECRET_KEY='key demo'
 STORK_PATH = '/Users/wl/Desktop/stork.py'
 JSON_DEMO = '/Users/wl/Desktop/Baldwin/config/recipes.json'
+IMAGE_PATH = '/Users/wl/Downloads/image.webp'
