--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_HOST='127.0.0.1'
 DB_USER='admin'
 DB_PASS='123456'
 JSON_DEMO='/Users/mac/Desktop/Baldwin/config/recipes.json'
-IMAGE_PATH='/Users/mac/Desktop/Baldwin/config/pic/111.webp'
+IMAGE_PATH='./config/pic/soft.png'
