--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 about-time==4.2.1
 adbutils==0.16.2
 aiofiles==23.2.1
-aiohttp==3.9.1
+aiohttp~=3.9.5
 aiosignal==1.3.1
 alive-progress==3.1.5
 altgraph==0.17.2
@@ -34,7 +34,7 @@ cryptography==41.0.5
 cssselect==1.2.0
 cycler==0.12.1
 dataclasses==0.6
-DataRecorder==3.4.11
+DataRecorder~=3.4.14
 decorator==5.1.1
 defusedxml==0.7.1
 deprecated==1.2.12
@@ -43,14 +43,14 @@ distlib==0.3.8
 Django==4.2.9
 dnspython==2.6.1
 DownloadKit==2.0.0
-DrissionPage==4.0.3.4
+DrissionPage~=4.0.4.24
 email_validator==2.1.1
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 fastapi==0.110.0
 fastui==0.5.2
 filelock==3.13.1
-Flask==3.0.2
+Flask~=3.0.3
 Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-OpenID==1.3.0
@@ -97,18 +97,18 @@ lxml==4.9.2
 macholib==1.15.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.4
-matplotlib==3.8.2
+matplotlib~=3.9.0
 mdit-py-plugins==0.4.0
 mdurl==0.1.2
 msgpack==1.0.7
 multidict==6.0.4
 mypy-extensions==1.0.0
-numpy==1.26.1
+numpy~=2.0.0
 opencv-contrib-python==4.5.3.56
 opencv-python==4.5.3.56
 openpyxl==3.1.2
 packaging==20.9
-pandas==2.2.0
+pandas~=2.2.2
 parameterized==0.8.1
 paramiko==3.4.0
 pathspec==0.11.2
@@ -128,7 +128,7 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 pyelftools==0.30
 Pygments==2.17.2
-PyMySQL==0.9.3
+PyMySQL~=1.1.1
 PyNaCl==1.5.0
 pyOpenSSL==23.3.0
 pyparsing==3.1.1
@@ -148,11 +148,11 @@ pyzmq==25.1.2
 qiniu==7.13.0
 redis==3.4.1
 referencing==0.32.1
-requests==2.29.0
+requests~=2.32.3
 requests-file==1.5.1
 requests-toolbelt==1.0.0
 retry==0.9.2
-rich==13.7.0
+rich~=13.7.1
 roundrobin==0.0.4
 rpds-py==0.17.1
 scikit-learn==1.3.0
@@ -179,11 +179,11 @@ tldextract==5.1.1
 toml==0.10.2
 tomli==2.0.1
 toolong==1.4.0
-tornado==6.0
+tornado~=6.4.1
 typing_extensions==4.10.0
 tzdata==2023.4
 uc-micro-py==1.0.2
-urllib3==1.26.18
+urllib3~=1.26.15
 uvicorn==0.27.1
 uWSGI==2.0.23
 virtualenv==20.25.0
@@ -201,3 +201,9 @@ zipp==3.17.0
 zope.event==5.0
 zope.interface==6.1
 locust==2.28.0
+playwright~=1.44.0
+python-dotenv~=1.0.1
+sanic~=23.12.1
+cachetools~=5.3.3
+httpx~=0.27.0
+beautifulsoup4~=4.12.3
