--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 about-time==4.2.1
 adbutils==0.16.2
 aiofiles==23.2.1
-aiohttp~=3.9.5
+aiohttp~=3.11.11
 aiosignal==1.3.1
 alive-progress==3.1.5
 altgraph==0.17.2
@@ -50,7 +50,7 @@ exceptiongroup==1.1.3
 fastapi==0.110.0
 fastui==0.5.2
 filelock==3.13.1
-Flask~=3.0.3
+Flask~=3.1.0
 Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-OpenID==1.3.0
@@ -91,7 +91,7 @@ jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
 linkify-it-py==2.0.2
-loguru==0.7.2
+loguru~=0.7.3
 logzero==1.7.0
 lxml==4.9.2
 macholib==1.15.2
@@ -120,7 +120,7 @@ pluggy==1.3.0
 potime==0.0.2
 progress==1.6
 protobuf==4.24.4
-psutil==5.9.8
+psutil~=6.1.1
 py==1.11.0
 pyasn1==0.5.0
 pycparser==2.21
@@ -152,7 +152,7 @@ requests~=2.32.3
 requests-file==1.5.1
 requests-toolbelt==1.0.0
 retry==0.9.2
-rich~=13.7.1
+rich~=13.9.4
 roundrobin==0.0.4
 rpds-py==0.17.1
 scikit-learn==1.3.0
@@ -183,7 +183,7 @@ tornado~=6.4.1
 typing_extensions==4.10.0
 tzdata==2023.4
 uc-micro-py==1.0.2
-urllib3~=1.26.15
+urllib3~=2.2.3
 uvicorn==0.27.1
 uWSGI==2.0.23
 virtualenv==20.25.0
@@ -200,10 +200,12 @@ yarl==1.9.4
 zipp==3.17.0
 zope.event==5.0
 zope.interface==6.1
-locust==2.28.0
+locust~=2.32.5
 playwright~=1.44.0
 python-dotenv~=1.0.1
 sanic~=23.12.1
 cachetools~=5.3.3
 httpx~=0.27.0
 beautifulsoup4~=4.12.3
+sortedcontainers~=2.4.0
+web3~=7.6.1
