refactor: remove unnecessary sys.path modification and banner comments
- Remove commented out code for sys.path manipulation in __init__.py.
- Eliminate unused banner comments in color_pr.py and gongju/xing_neng.py.
-

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
+demo
+.idea
+.DS_Store
+.env
+.pytest_cache
+__pycache__
 tempfile_*
 abc_test*
 wl*
-__pycache
-.idea
-.DS_Store
 *.log
 *.pyc
-.env
-.pytest_cache
-demo
